Add .env in gitignore and start userCredential class

--- a/public/html/userCredentials.html
+++ b/public/html/userCredentials.html
@@ -18,7 +18,7 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
         </div>
-        <button type="submit">Submit</button>
+        <button id="submitButton" type="submit">Submit</button>
     </form-container>
 </body>
 </html>
